--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body{
     width: 100%;
     height: 100%;
     min-width: 100%;
-    background-image: url(/img/panoramic-view-sunset-night.jpg);
+    background-image: url(panoramic-view-sunset-night.jpg);
     min-height: 100vh;
     overflow-x: hidden;
 }
@@ -377,7 +377,7 @@ h4{
     font-size: 85px;
     text-align: center;
     font-weight: bold;
-    background-image: url(img/Azerbaijan-m.gif);
+    background-image: url(Azerbaijan-m.gif);
     background-size: 600px 100px;
     background-repeat: no-repeat;
     background-position: center;
@@ -672,6 +672,7 @@ h1{
 
 
 }
+
 
 
 
