--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body{
     width: 100%;
     height: 100%;
     min-width: 100%;
-    background-image: url(panoramic-view-sunset-night.jpg);
+    background-image: url(/img/panoramic-view-sunset-night.jpg);
     min-height: 100vh;
     overflow-x: hidden;
 }
@@ -377,7 +377,7 @@ h4{
     font-size: 85px;
     text-align: center;
     font-weight: bold;
-    background-image: url(Azerbaijan-m.gif);
+    background-image: url(img/Azerbaijan-m.gif);
     background-size: 600px 100px;
     background-repeat: no-repeat;
     background-position: center;
@@ -570,7 +570,7 @@ font-size: 13px;
 }
 }
 
-@media (max-width: 540px) {
+@media (max-width: 600px) {
     nav{
         align-items: center;
         gap: 20px;
@@ -673,6 +673,108 @@ h1{
 
 }
 
+@media (max-width: 540px) {
+    nav{
+        align-items: center;
+        gap: 20px;
+    }
+    .navbar .links{
+        font-size: 17px;
+    }
+    .title {
+        font-size: 18px;
+    }
+
+    .title::before {
+        height: 25px;
+        width: 25px;
+    }
+
+.about h3{
+    font-size: 23px;
+}
+
+h1{
+    font-size: 36px;
+}
+
+.cat{
+    width: 60px;
+    height: 60px;
+}
+
+    h1::before {
+        height: 22px;
+        width: 22px;
+    }
+
+    .carousel__item {
+        flex: 0 0 100%; 
+        margin: 0; 
+    }
+
+    .carousel__item img {
+        height: 220px; 
+    }
+
+    .carousel__item h3 {
+        font-size: 16px;
+    }
+
+    
+    .card {
+        width: 80%;  
+        padding: 10px;
+        height: 92%;
+    }
+
+    .card img {
+        width: 70px;
+    }
+
+    .skills-par {
+        font-size: 12px;
+        text-align: left;
+    }
+
+    
+    .about-inf {
+        flex-direction: column;  
+        align-items: center;
+        text-align: center;
+        font-size: 12px;
+    }
+
+    .description .me {
+        width: 400px;
+        height: 300px;
+    }
+
+    .country {
+        font-size: 50px;
+        background-size: 400px 70px;
+    }
+    
+    .about-inf .me{
+    display: none;
+    }
+    
+    .about-par{
+        text-align: left;
+    }
+
+    .about_title::before{
+    left:13%;
+    height: 27px;
+    width: 27px;
+}
+
+.about-inf h4{
+    text-align: left;
+}
+
+
+}
 
 
 
